--- a/app/notebooks/renewable-generation.ipynb
+++ b/app/notebooks/renewable-generation.ipynb
@@ -1,10 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\computation\\expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.1' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n"
+     ]
+    }
+   ],
    "source": [
     "import os.path\n",
     "import pandas as pd\n",
@@ -16,6 +32,13 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('ggplot')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read Data"
    ]
   },
   {
@@ -187,7 +210,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 59804 entries, 0 to 59805\n",
+      "Index: 59804 entries, 0 to 59805\n",
       "Data columns (total 9 columns):\n",
       " #   Column         Non-Null Count  Dtype         \n",
       "---  ------         --------------  -----         \n",
@@ -207,6 +230,13 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pre Process Data"
    ]
   },
   {
@@ -376,8 +406,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +425,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Source</th>\n",
+       "      <th>dayOfYear</th>\n",
+       "      <th>dayName</th>\n",
+       "      <th>monthName</th>\n",
+       "      <th>Total_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>204</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>205</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>205</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>205</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>205</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Source  dayOfYear  dayName  monthName  Total_time\n",
+       "0       0        204        6          5          60\n",
+       "1       0        205        4          5          60\n",
+       "2       0        205        4          5          60\n",
+       "3       0        205        4          5          60\n",
+       "4       0        205        4          5          60"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +533,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.00003344,  0.30058321,  1.4978966 , -0.10449448,  0.        ],\n",
+       "       [-1.00003344,  0.31011271,  0.49903163, -0.10449448,  0.        ],\n",
+       "       [-1.00003344,  0.31011271,  0.49903163, -0.10449448,  0.        ],\n",
+       "       ...,\n",
+       "       [-1.00003344,  0.0814047 , -1.49869831,  0.19008401,  0.        ],\n",
+       "       [-1.00003344,  0.0814047 , -1.49869831,  0.19008401,  0.        ],\n",
+       "       [-1.00003344,  0.0814047 , -1.49869831,  0.19008401,  0.        ]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_ss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,8 +569,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,17 +601,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean absolute error: 1986.8787802944125\n",
-      "mean squared error: 6988177.527176465\n",
+      "mean absolute error: 1986.878780294415\n",
+      "mean squared error: 6988177.527176466\n",
       "root mean squared error: 2643.5161295472485\n",
-      "r2-score: 0.3051884617025955\n"
+      "r2-score: 0.3051884617025953\n"
      ]
     }
    ],
@@ -458,17 +624,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([7006.71344633,  126.26148357, 1819.7777246 , ..., 2237.32193226,\n",
-       "        600.68271583, 3756.52754765])"
+       "array([7010.91826089,  136.36358185, 1867.64709204, ..., 2304.52963551,\n",
+       "        596.97690618, 3760.11895365])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,17 +648,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean absolute error: 1163.9862393417711\n",
-      "mean squared error: 2291312.202736945\n",
-      "root mean squared error: 1513.708096938424\n",
-      "R2 score: 0.772182353680628\n"
+      "mean absolute error: 1165.3635683096647\n",
+      "mean squared error: 2297547.264065374\n",
+      "root mean squared error: 1515.7662300187897\n",
+      "R2 score: 0.7715624220123014\n"
      ]
     }
    ],
@@ -504,8 +670,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,21 +699,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, validate, test = np.split(df.sample(frac=1, random_state=42), [int(.6*len(df)), int(.8*len(df))])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.772182353680628\n"
+      "(59804, 6)\n",
+      "(35882, 6)\n",
+      "(11961, 6)\n",
+      "(11961, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.shape)\n",
+    "print(train.shape)\n",
+    "print(test.shape)\n",
+    "print(validate.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_val=validate.drop(['Production'],axis=1)\n",
+    "y_val=validate['Production']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Source</th>\n",
+       "      <th>dayOfYear</th>\n",
+       "      <th>dayName</th>\n",
+       "      <th>monthName</th>\n",
+       "      <th>Total_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16803</th>\n",
+       "      <td>0</td>\n",
+       "      <td>313</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24419</th>\n",
+       "      <td>1</td>\n",
+       "      <td>178</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1573</th>\n",
+       "      <td>1</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45304</th>\n",
+       "      <td>1</td>\n",
+       "      <td>260</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2423</th>\n",
+       "      <td>0</td>\n",
+       "      <td>49</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Source  dayOfYear  dayName  monthName  Total_time\n",
+       "16803       0        313        3          9          60\n",
+       "24419       1        178        3          6          60\n",
+       "1573        1         45        0          3          60\n",
+       "45304       1        260        2         11          60\n",
+       "2423        0         49        5          3          60"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_val.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_ss=ss.fit_transform(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8049293822034228\n"
      ]
     }
    ],
    "source": [
     "# load the model from disk\n",
-    "loaded_model = pickle.load(open(filename, 'rb'))\n",
-    "result = loaded_model.score(X_test, y_test)\n",
+    "loaded_model = pickle.load(open(p, 'rb'))\n",
+    "result = loaded_model.score(X_ss, y_val)\n",
     "print(result)"
    ]
   },
@@ -554,7 +874,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -570,7 +890,19 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
   },
-  "orig_nbformat": 4
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
