--- a/app/notebooks/renewable-generation.ipynb
+++ b/app/notebooks/renewable-generation.ipynb
@@ -9,23 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\computation\\expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.1' currently installed).\n",
-      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os.path\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
+    "import pickle\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -678,15 +670,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [],
@@ -699,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,6 +710,108 @@
     "print(train.shape)\n",
     "print(test.shape)\n",
     "print(validate.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Production</th>\n",
+       "      <th>dayOfYear</th>\n",
+       "      <th>dayName</th>\n",
+       "      <th>monthName</th>\n",
+       "      <th>Total_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22391</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>143</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4302</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3494.0</td>\n",
+       "      <td>326</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35774</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22694</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3456.0</td>\n",
+       "      <td>139</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53998</th>\n",
+       "      <td>1</td>\n",
+       "      <td>8869.0</td>\n",
+       "      <td>66</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Source  Production  dayOfYear  dayName  monthName  Total_time\n",
+       "22391       0         1.0        143        3          8          60\n",
+       "4302        1      3494.0        326        2          9          60\n",
+       "35774       0         3.0         40        6          3          60\n",
+       "22694       1      3456.0        139        6          8          60\n",
+       "53998       1      8869.0         66        5          7          60"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.head()"
    ]
   },
   {
@@ -862,6 +947,122 @@
     "loaded_model = pickle.load(open(p, 'rb'))\n",
     "result = loaded_model.score(X_ss, y_val)\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "parent_dir = os.path.dirname(os.path.abspath(\"__file__\"))\n",
+    "p = parent_dir + r'/../output/test.pkl'\n",
+    "\n",
+    "X_test, y_test = pickle.load(open(p, 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3494.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>326.0</td>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3456.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>139.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8869.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0    1     2    3      4    5\n",
+       "0     1.0  0.0  60.0  3.0  143.0  8.0\n",
+       "1  3494.0  1.0  60.0  2.0  326.0  9.0\n",
+       "2     3.0  0.0  60.0  6.0   40.0  3.0\n",
+       "3  3456.0  1.0  60.0  6.0  139.0  8.0\n",
+       "4  8869.0  1.0  60.0  5.0   66.0  7.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(X_test.toarray())\n",
+    "df.head()"
    ]
   },
   {
