--- a/app/notebooks/renewable-generation.ipynb
+++ b/app/notebooks/renewable-generation.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\computation\\expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.1' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n"
+     ]
+    }
+   ],
    "source": [
     "import os.path\n",
     "import pandas as pd\n",
@@ -951,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -993,13 +1002,11 @@
        "      <th>2</th>\n",
        "      <th>3</th>\n",
        "      <th>4</th>\n",
-       "      <th>5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>60.0</td>\n",
        "      <td>3.0</td>\n",
@@ -1008,7 +1015,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3494.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>60.0</td>\n",
        "      <td>2.0</td>\n",
@@ -1017,7 +1023,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>60.0</td>\n",
        "      <td>6.0</td>\n",
@@ -1026,7 +1031,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3456.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>60.0</td>\n",
        "      <td>6.0</td>\n",
@@ -1035,7 +1039,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>8869.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>60.0</td>\n",
        "      <td>5.0</td>\n",
@@ -1047,15 +1050,15 @@
        "</div>"
       ],
       "text/plain": [
-       "        0    1     2    3      4    5\n",
-       "0     1.0  0.0  60.0  3.0  143.0  8.0\n",
-       "1  3494.0  1.0  60.0  2.0  326.0  9.0\n",
-       "2     3.0  0.0  60.0  6.0   40.0  3.0\n",
-       "3  3456.0  1.0  60.0  6.0  139.0  8.0\n",
-       "4  8869.0  1.0  60.0  5.0   66.0  7.0"
+       "     0     1    2      3    4\n",
+       "0  0.0  60.0  3.0  143.0  8.0\n",
+       "1  1.0  60.0  2.0  326.0  9.0\n",
+       "2  0.0  60.0  6.0   40.0  3.0\n",
+       "3  1.0  60.0  6.0  139.0  8.0\n",
+       "4  1.0  60.0  5.0   66.0  7.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,6 +1067,13 @@
     "df = pd.DataFrame(X_test.toarray())\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
